# pittfinder

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
pittfinder/: __init__.py  api.py  download.py
