[tool.poetry]
name = "pittfinder"
version = "0.1.0"
description = ""
authors = ["jlgingrich <jlgingrich@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selectolax = "^0.3.20"
requests = "^2.31.0"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
