[tool.poetry]
name = "pittfinder"
version = "0.1.0"
description = ""
authors = ["jlgingrich <jlgingrich@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selectolax = "^0.3.20"
requests = "^2.31.0"
types-requests = "^2.31.0.20240218"
pathlib = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
isort = "^5.13.2"
black = "^24.2.0"
mypy = "^1.8.0"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
